--- a/course-02/project/image-filter-starter-code/package.json
+++ b/course-02/project/image-filter-starter-code/package.json
@@ -2,9 +2,15 @@
   "name": "udacity-c2-image-filter",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
+
+
+  "engines": {
+    "node": "=12.22.1"
+  },
+
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha -r ts-node/register src/**/*.tests.ts",
     "clean": "rimraf www/ || true",
     "build": "npm run clean && tsc && cp package.json www/package.json && mkdir www/tmp/ && cd www && zip -r Archive.zip . && cd ..",
     "dev": "ts-node-dev ./src/server.ts"
@@ -20,15 +26,31 @@
   },
   "homepage": "https://github.com/grutt/udacity-c2-image-filter#readme",
   "devDependencies": {
-    "@types/bluebird": "^3.5.27",
-    "@types/express": "^4.17.0",
-    "@types/node": "^11.13.17",
-    "ts-node-dev": "^1.0.0-pre.40",
-    "tslint": "^5.18.0",
-    "typescript": "^3.5.3"
+    "@types/bluebird": "^3.5.33",
+    "@types/chai": "^4.2.14",
+    "@types/express": "^4.17.9",
+    "@types/mocha": "^5.2.7",
+    "@types/node": "^11.15.42",
+    "chai": "^4.2.0",
+    "js-yaml": "^3.14.1",
+    "chai-http": "^4.3.0",
+    "mocha": "^6.2.3",
+    "rimraf": "^3.0.2",
+    "ts-node-dev": "^1.1.1",
+    "tslint": "^5.20.1",
+    "typescript": "^3.9.7"
   },
   "dependencies": {
+    "@types/bcrypt": "^3.0.0",
+    "@types/jsonwebtoken": "^8.3.2",
+    "aws-sdk": "^2.492.0",
+    "bcrypt": "^5.0.0",
+    "body-parser": "^1.19.0",
+    "email-validator": "^2.0.4",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "pg": "^7.11.0",
+    "reflect-metadata": "^0.1.13",
     "jimp": "^0.16.1",
     "rimraf": "^3.0.2"
   }
